@@ -494,8 +494,10 @@ class="sc-1">&lt;!-- 2 --&gt;</span>
       way though deprecated is still supported.<br>
       <h2 id="toc5"><a name="Application-Documentation module"></a>Documentation
         module</h2>
-      A documentation module can only display a HTML document. It's easy to
-      define:<br>
+      <b style="color: red;"><i>Warning: Documentation modules only work with
+          Liferay or WebSphere Portal</i></b></div>
+    <div class="wiki" style="display: block;"> A documentation module can only
+      display a HTML document. It's easy to define:<br>
       <style type="text/css"><!--
 /**
  * GeSHi (C) 2004 - 2007 Nigel McNie, 2007 - 2008 Benny Baumann
