@@ -23,8 +23,7 @@
             de solo lectura</a></div>
       </div>
       <strong>Guía de referencia</strong>: <a class="wiki_link" href="model_es.html">Modelo</a>
-      | <a class="wiki_link" href="view_es.html">Vista</a> | <a class="wiki_link"
-
+      | <a class="wiki_link" href="view_es.html">Vista</a> | <a class="wiki_link"
         href="tab_es.html">Datos tabulares</a> | <a class="wiki_link" href="mapping_es.html">Mapeo
         objeto/relacional</a> | <a class="wiki_link" href="controllers_es.html">Controladores</a>
       | <strong>Aplicación</strong> | <a class="wiki_link" href="customizing_es.html">Personalización</a><br>
@@ -59,16 +58,13 @@
 
 -->
 </style><pre class="xml"><span class="sc3"><span class="re1">&lt;aplicacion</span></span>
-<span class="sc3">    <span class="re0">nombre</span>=<span class="st0">"nombre"</span>                   &lt;!-- 1 --<span
-
+<span class="sc3">    <span class="re0">nombre</span>=<span class="st0">"nombre"</span>                   &lt;!-- 1 --<span
 class="re2">&gt;</span></span>
     etiqueta="etiqueta"               <span class="sc-1">&lt;!-- 2 --&gt;</span>
 &gt;
-    <span class="sc3"><span class="re1">&lt;modulo-defecto</span> ... <span class="re2">/&gt;</span></span> ...        <span
-
+    <span class="sc3"><span class="re1">&lt;modulo-defecto</span> ... <span class="re2">/&gt;</span></span> ...        <span
 class="sc-1">&lt;!-- 3  Nuevo en v2.2.2 --&gt;</span>
-    <span class="sc3"><span class="re1">&lt;modulo</span> ... <span class="re2">/&gt;</span></span> ...                <span
-
+    <span class="sc3"><span class="re1">&lt;modulo</span> ... <span class="re2">/&gt;</span></span> ...                <span
 class="sc-1">&lt;!-- 4 --&gt;</span>
 <span class="sc3"><span class="re1">&lt;/aplicacion<span class="re2">&gt;</span></span></span></pre>
       <ol>
@@ -106,36 +102,27 @@ class="sc-1">&lt;!-- 4 --&gt;</span>
 
 -->
 </style><pre class="xml"><span class="sc3"><span class="re1">&lt;modulo</span></span>
-<span class="sc3">    <span class="re0">nombre</span>=<span class="st0">"nombre"</span>                  &lt;!--  1 --<span
-
+<span class="sc3">    <span class="re0">nombre</span>=<span class="st0">"nombre"</span>                  &lt;!--  1 --<span
 class="re2">&gt;</span></span>
     carpeta="carpeta"                <span class="sc-1">&lt;!--  2 --&gt;</span>
     etiqueta="etiqueta"              <span class="sc-1">&lt;!--  3 --&gt;</span>
     descripcion="descripcion"        <span class="sc-1">&lt;!--  4 --&gt;</span>
 &gt;
-    <span class="sc3"><span class="re1">&lt;var-entorno</span> ... <span class="re2">/&gt;</span></span> ...          <span
-
+    <span class="sc3"><span class="re1">&lt;var-entorno</span> ... <span class="re2">/&gt;</span></span> ...          <span
 class="sc-1">&lt;!--  5 --&gt;</span>
-    <span class="sc3"><span class="re1">&lt;modelo</span> ... <span class="re2">/&gt;</span></span>                   <span
-
+    <span class="sc3"><span class="re1">&lt;modelo</span> ... <span class="re2">/&gt;</span></span>                   <span
 class="sc-1">&lt;!--  6 --&gt;</span>
-    <span class="sc3"><span class="re1">&lt;vista</span> ... <span class="re2">/&gt;</span></span>                    <span
-
+    <span class="sc3"><span class="re1">&lt;vista</span> ... <span class="re2">/&gt;</span></span>                    <span
 class="sc-1">&lt;!--  7 --&gt;</span>
-    <span class="sc3"><span class="re1">&lt;vista-web</span> ... <span class="re2">/&gt;</span></span>                <span
-
+    <span class="sc3"><span class="re1">&lt;vista-web</span> ... <span class="re2">/&gt;</span></span>                <span
 class="sc-1">&lt;!--  8 --&gt;</span>
-    <span class="sc3"><span class="re1">&lt;tab</span> ... <span class="re2">/&gt;</span></span>                      <span
-
+    <span class="sc3"><span class="re1">&lt;tab</span> ... <span class="re2">/&gt;</span></span>                      <span
 class="sc-1">&lt;!--  9 --&gt;</span>
-    <span class="sc3"><span class="re1">&lt;controlador</span> ... <span class="re2">/&gt;</span></span> ...          <span
-
+    <span class="sc3"><span class="re1">&lt;controlador</span> ... <span class="re2">/&gt;</span></span> ...          <span
 class="sc-1">&lt;!-- 10 --&gt;</span>
-    <span class="sc3"><span class="re1">&lt;controlador-modo</span> ... <span class="re2">/&gt;</span></span>         <span
-
+    <span class="sc3"><span class="re1">&lt;controlador-modo</span> ... <span class="re2">/&gt;</span></span>         <span
 class="sc-1">&lt;!-- 11 --&gt;</span>
-    <span class="sc3"><span class="re1">&lt;doc</span> ... <span class="re2">/&gt;</span></span>                      <span
-
+    <span class="sc3"><span class="re1">&lt;doc</span> ... <span class="re2">/&gt;</span></span>                      <span
 class="sc-1">&lt;!-- 12 --&gt;</span>
 <span class="sc3"><span class="re1">&lt;/modulo<span class="re2">&gt;</span></span></span></pre>
       <ol>
@@ -206,22 +193,16 @@ class="sc-1">&lt;!-- 12 --&gt;</span>
 .xml span.xtra { display:block; }
 
 -->
-</style><pre class="xml"><span class="sc3"><span class="re1">&lt;aplicacion</span> <span
-
+</style><pre class="xml"><span class="sc3"><span class="re1">&lt;aplicacion</span> <span
 class="re0">nombre</span>=<span class="st0">"Gestion"</span><span class="re2">&gt;</span></span>
-    <span class="sc3"><span class="re1">&lt;modulo</span> <span class="re0">nombre</span>=<span
-
-class="st0">"Almacen"</span> <span class="re0">carpeta</span>=<span class="st0">"almacen"</span><span
-
+    <span class="sc3"><span class="re1">&lt;modulo</span> <span class="re0">nombre</span>=<span
+class="st0">"Almacen"</span> <span class="re0">carpeta</span>=<span class="st0">"almacen"</span><span
 class="re2">&gt;</span></span>
-        <span class="sc3"><span class="re1">&lt;modelo</span> <span class="re0">nombre</span>=<span
-
+        <span class="sc3"><span class="re1">&lt;modelo</span> <span class="re0">nombre</span>=<span
 class="st0">"Almacen"</span><span class="re2">/&gt;</span></span>
-        <span class="sc3"><span class="re1">&lt;controlador</span> <span class="re0">nombre</span>=<span
-
+        <span class="sc3"><span class="re1">&lt;controlador</span> <span class="re0">nombre</span>=<span
 class="st0">"Typical"</span><span class="re2">/&gt;</span></span>
-        <span class="sc3"><span class="re1">&lt;controlador</span> <span class="re0">nombre</span>=<span
-
+        <span class="sc3"><span class="re1">&lt;controlador</span> <span class="re0">nombre</span>=<span
 class="st0">"Almacen"</span><span class="re2">/&gt;</span></span>
     <span class="sc3"><span class="re1">&lt;/modulo<span class="re2">&gt;</span></span></span>
     ...
@@ -233,8 +214,7 @@ class="st0">"Almacen"</span><span class="re2">/&gt;</span></span>
       En el caso en que el sistema genere una estructura de módulos (actualmente
       no soportado) este módulo estará en la carpeta "almacen".<br>
       Para ejecutar este módulo podemos desde nuestro navegador escribir:<br>
-      <a class="wiki_link_ext" href="http://localhost:8080/Gestion/modules/Almacen"
-
+      <a class="wiki_link_ext" href="http://localhost:8080/Gestion/modules/Almacen"
         rel="nofollow">http://localhost:8080/Gestion/modules/Almacen</a><br>
       También se genera un portlet para poder desplegar el módulo como un
       portlet JSR-168/286 en un portal Java.<br>
@@ -248,8 +228,7 @@ class="st0">"Almacen"</span><span class="re2">/&gt;</span></span>
       aplicación, aunque el módulo no se defina explícitamente en <em>aplicacion.xml</em>.<br>
       Es decir, si definimos un componente <em>Factura.java</em>, podemos abrir
       nuestro navegador e ir a:<br>
-      <a class="wiki_link_ext" href="http://localhost:8080/Gestion/modules/Factura"
-
+      <a class="wiki_link_ext" href="http://localhost:8080/Gestion/modules/Factura"
         rel="nofollow">http://localhost:8080/Gestion/modules/Factura</a><br>
       También un portlet es generado para permitir desplegar el módulo como un
       portlet JSR-168 en un portal Java.<br>
@@ -279,13 +258,11 @@ class="st0">"Almacen"</span><span class="re2">/&gt;</span></span>
 .xml span.xtra { display:block; }
 
 -->
-</style><pre class="xml"><span class="sc3"><span class="re1">&lt;aplicacion</span> <span
-
+</style><pre class="xml"><span class="sc3"><span class="re1">&lt;aplicacion</span> <span
 class="re0">nombre</span>=<span class="st0">"Gestion"</span><span class="re2">&gt;</span></span>
 &nbsp;
     <span class="sc3"><span class="re1">&lt;modulo-defecto<span class="re2">&gt;</span></span></span>
-        <span class="sc3"><span class="re1">&lt;controlador</span> <span class="re0">nombre</span>=<span
-
+        <span class="sc3"><span class="re1">&lt;controlador</span> <span class="re0">nombre</span>=<span
 class="st0">"MantenimientoGestion"</span><span class="re2">/&gt;</span></span>
     <span class="sc3"><span class="re1">&lt;/modulo-defecto<span class="re2">&gt;</span></span></span>
 &nbsp;
@@ -342,17 +319,13 @@ class="st0">"MantenimientoGestion"</span><span class="re2">/&gt;</span></span>
 .xml span.xtra { display:block; }
 
 -->
-</style><pre class="xml"><span class="sc3"><span class="re1">&lt;modulo</span> <span
-
+</style><pre class="xml"><span class="sc3"><span class="re1">&lt;modulo</span> <span
 class="re0">nombre</span>=<span class="st0">"FacturaSinLista"</span><span class="re2">&gt;</span></span>
-    <span class="sc3"><span class="re1">&lt;modelo</span> <span class="re0">nombre</span>=<span
-
+    <span class="sc3"><span class="re1">&lt;modelo</span> <span class="re0">nombre</span>=<span
 class="st0">"Factura"</span><span class="re2">/&gt;</span></span>
-    <span class="sc3"><span class="re1">&lt;controlador</span> <span class="re0">nombre</span>=<span
-
+    <span class="sc3"><span class="re1">&lt;controlador</span> <span class="re0">nombre</span>=<span
 class="st0">"Typical"</span><span class="re2">/&gt;</span></span>
-    <span class="sc3"><span class="re1">&lt;controlador-modo</span> <span class="re0">nombre</span>=<span
-
+    <span class="sc3"><span class="re1">&lt;controlador-modo</span> <span class="re0">nombre</span>=<span
 class="st0">"DetailOnly"</span><span class="re2">/&gt;</span></span>    <span class="sc-1">&lt;!-- 1 --&gt;</span>
 <span class="sc3"><span class="re1">&lt;/modulo<span class="re2">&gt;</span></span></span></pre>
       Simplemente usa <em>DetailOnly</em> (1) como <em>mode-controller</em>.<br>
@@ -380,17 +353,13 @@ class="st0">"DetailOnly"</span><span class="re2">/&gt;</span></span>    <span cl
 .xml span.xtra { display:block; }
 
 -->
-</style><pre class="xml"><span class="sc3"><span class="re1">&lt;modulo</span> <span
-
+</style><pre class="xml"><span class="sc3"><span class="re1">&lt;modulo</span> <span
 class="re0">nombre</span>=<span class="st0">"FacturaSinLista"</span><span class="re2">&gt;</span></span>
-    <span class="sc3"><span class="re1">&lt;modelo</span> <span class="re0">nombre</span>=<span
-
+    <span class="sc3"><span class="re1">&lt;modelo</span> <span class="re0">nombre</span>=<span
 class="st0">"Factura"</span><span class="re2">/&gt;</span></span>
-    <span class="sc3"><span class="re1">&lt;controlador</span> <span class="re0">nombre</span>=<span
-
+    <span class="sc3"><span class="re1">&lt;controlador</span> <span class="re0">nombre</span>=<span
 class="st0">"Typical"</span><span class="re2">/&gt;</span></span>
-    <span class="sc3"><span class="re1">&lt;controlador-modo</span> <span class="re0">nombre</span>=<span
-
+    <span class="sc3"><span class="re1">&lt;controlador-modo</span> <span class="re0">nombre</span>=<span
 class="st0">"Void"</span><span class="re2">/&gt;</span></span>    <span class="sc-1">&lt;!-- 1 --&gt;</span>
 <span class="sc3"><span class="re1">&lt;/modulo<span class="re2">&gt;</span></span></span></pre>
       El controlador de modo <em>Void</em> (1) es para que no aparezcan los
@@ -423,19 +392,14 @@ class="st0">"Void"</span><span class="re2">/&gt;</span></span>    <span class="s
 .xml span.xtra { display:block; }
 
 -->
-</style><pre class="xml"><span class="sc3"><span class="re1">&lt;modulo</span> <span
-
+</style><pre class="xml"><span class="sc3"><span class="re1">&lt;modulo</span> <span
 class="re0">nombre</span>=<span class="st0">"FamiliaSoloLista"</span><span class="re2">&gt;</span></span>
-    <span class="sc3"><span class="re1">&lt;var-entorno</span> <span class="re0">nombre</span>=<span
-
-class="st0">"XAVA_LIST_ACTION"</span> <span class="re0">valor</span>=<span class="st0">""</span><span
-
+    <span class="sc3"><span class="re1">&lt;var-entorno</span> <span class="re0">nombre</span>=<span
+class="st0">"XAVA_LIST_ACTION"</span> <span class="re0">valor</span>=<span class="st0">""</span><span
 class="re2">/&gt;</span></span>    <span class="sc-1">&lt;!-- 1  Nuevo en v2.0.4 --&gt;</span>
-    <span class="sc3"><span class="re1">&lt;modelo</span> <span class="re0">nombre</span>=<span
-
+    <span class="sc3"><span class="re1">&lt;modelo</span> <span class="re0">nombre</span>=<span
 class="st0">"Familia"</span><span class="re2">/&gt;</span></span>
-    <span class="sc3"><span class="re1">&lt;controlador</span> <span class="re0">nombre</span>=<span
-
+    <span class="sc3"><span class="re1">&lt;controlador</span> <span class="re0">nombre</span>=<span
 class="st0">"Typical"</span><span class="re2">/&gt;</span></span>
 <span class="sc3"><span class="re1">&lt;/modulo<span class="re2">&gt;</span></span></span></pre>
         Poniendo XAVA_LIST_ACTION a cadena vacía (1) el vínculo de detalle en
@@ -466,24 +430,17 @@ class="st0">"Typical"</span><span class="re2">/&gt;</span></span>
 .xml span.xtra { display:block; }
 
 -->
-</style><pre class="xml"><span class="sc3"><span class="re1">&lt;modulo</span> <span
-
+</style><pre class="xml"><span class="sc3"><span class="re1">&lt;modulo</span> <span
 class="re0">nombre</span>=<span class="st0">"FamiliaSoloLista"</span><span class="re2">&gt;</span></span>
-    <span class="sc3"><span class="re1">&lt;var-entorno</span> <span class="re0">nombre</span>=<span
-
-class="st0">"XAVA_LIST_ACTION"</span> <span class="re0">valor</span>=<span class="st0">""</span><span
-
+    <span class="sc3"><span class="re1">&lt;var-entorno</span> <span class="re0">nombre</span>=<span
+class="st0">"XAVA_LIST_ACTION"</span> <span class="re0">valor</span>=<span class="st0">""</span><span
 class="re2">/&gt;</span></span>    
-    <span class="sc3"><span class="re1">&lt;modelo</span> <span class="re0">nombre</span>=<span
-
+    <span class="sc3"><span class="re1">&lt;modelo</span> <span class="re0">nombre</span>=<span
 class="st0">"Familia"</span><span class="re2">/&gt;</span></span>
-    <span class="sc3"><span class="re1">&lt;controlador</span> <span class="re0">nombre</span>=<span
-
+    <span class="sc3"><span class="re1">&lt;controlador</span> <span class="re0">nombre</span>=<span
 class="st0">"Typical"</span><span class="re2">/&gt;</span></span>
-    <span class="sc3"><span class="re1">&lt;controlador-modo</span> <span class="re0">nombre</span>=<span
-
-class="st0">"ListOnly"</span><span class="re2">/&gt;</span></span>               <span
-
+    <span class="sc3"><span class="re1">&lt;controlador-modo</span> <span class="re0">nombre</span>=<span
+class="st0">"ListOnly"</span><span class="re2">/&gt;</span></span>               <span
 class="sc-1">&lt;!-- 1 --&gt;</span>
 <span class="sc3"><span class="re1">&lt;/modulo<span class="re2">&gt;</span></span></span></pre>
       El controlador de modo <em>ListOnly</em> (1) es para que no aparezcan los
@@ -514,29 +471,20 @@ class="sc-1">&lt;!-- 1 --&gt;</span>
 .xml span.xtra { display:block; }
 
 -->
-</style><pre class="xml"><span class="sc3"><span class="re1">&lt;modulo</span> <span
-
+</style><pre class="xml"><span class="sc3"><span class="re1">&lt;modulo</span> <span
 class="re0">nombre</span>=<span class="st0">"FamiliaSoloLista"</span><span class="re2">&gt;</span></span>
-    <span class="sc3"><span class="re1">&lt;var-entorno</span> <span class="re0">nombre</span>=<span
-
-class="st0">"XAVA_LIST_ACTION"</span> <span class="re0">valor</span>=<span class="st0">""</span><span
-
+    <span class="sc3"><span class="re1">&lt;var-entorno</span> <span class="re0">nombre</span>=<span
+class="st0">"XAVA_LIST_ACTION"</span> <span class="re0">valor</span>=<span class="st0">""</span><span
 class="re2">/&gt;</span></span>
-    <span class="sc3"><span class="re1">&lt;modelo</span> <span class="re0">nombre</span>=<span
-
+    <span class="sc3"><span class="re1">&lt;modelo</span> <span class="re0">nombre</span>=<span
 class="st0">"Familia"</span><span class="re2">/&gt;</span></span>
-    <span class="sc3"><span class="re1">&lt;controlador</span> <span class="re0">nombre</span>=<span
-
+    <span class="sc3"><span class="re1">&lt;controlador</span> <span class="re0">nombre</span>=<span
 class="st0">"Typical"</span><span class="re2">/&gt;</span></span>
-    <span class="sc3"><span class="re1">&lt;controlador</span> <span class="re0">nombre</span>=<span
-
-class="st0">"ListOnly"</span><span class="re2">/&gt;</span></span>                     <span
-
+    <span class="sc3"><span class="re1">&lt;controlador</span> <span class="re0">nombre</span>=<span
+class="st0">"ListOnly"</span><span class="re2">/&gt;</span></span>                     <span
 class="sc-1">&lt;!-- 1 --&gt;</span>
-    <span class="sc3"><span class="re1">&lt;controlador-modo</span> <span class="re0">nombre</span>=<span
-
-class="st0">"Void"</span><span class="re2">/&gt;</span></span>                   <span
-
+    <span class="sc3"><span class="re1">&lt;controlador-modo</span> <span class="re0">nombre</span>=<span
+class="st0">"Void"</span><span class="re2">/&gt;</span></span>                   <span
 class="sc-1">&lt;!-- 2 --&gt;</span>
 <span class="sc3"><span class="re1">&lt;/modulo<span class="re2">&gt;</span></span></span></pre>
       El controlador de modo <em>Void</em> (2) es para que no aparezcan los
@@ -544,10 +492,12 @@ class="sc-1">&lt;!-- 2 --&gt;</span>
       controlador el módulo cambia a modo lista al iniciar, por lo tanto éste es
       un módulo de solo lista. Aunque obsoleta esta forma todavía está
       soportada.<br>
-      <h2 id="toc5"><a name="Aplicacion-Modulo+de+documentacion"></a>Módulo
-        de documentación</h2>
-      Un módulo de documentación solo visualiza un documento HTML. Es fácil de
-      definir:<br>
+      <h2 id="toc5"><a name="Aplicacion-Modulo+de+documentacion"></a>Módulo de
+        documentación</h2>
+      <b style="color: red;"><i>Advertencia: Los módulos de documentación sólo
+          funcionan con Liferay o WebSphere Portal</i></b></div>
+    <div class="wiki" style="display: block;"> Un módulo de documentación solo
+      visualiza un documento HTML. Es fácil de definir:<br>
       <style type="text/css"><!--
 /**
  * GeSHi (C) 2004 - 2007 Nigel McNie, 2007 - 2008 Benny Baumann
@@ -570,13 +520,10 @@ class="sc-1">&lt;!-- 2 --&gt;</span>
 .xml span.xtra { display:block; }
 
 -->
-</style><pre class="xml"><span class="sc3"><span class="re1">&lt;modulo</span> <span
-
+</style><pre class="xml"><span class="sc3"><span class="re1">&lt;modulo</span> <span
 class="re0">nombre</span>=<span class="st0">"Descripcion"</span><span class="re2">&gt;</span></span>
-    <span class="sc3"><span class="re1">&lt;doc</span> <span class="re0">url</span>=<span
-
-class="st0">"doc/descripcion"</span> <span class="re0">idiomas</span>=<span class="st0">"es,en"</span><span
-
+    <span class="sc3"><span class="re1">&lt;doc</span> <span class="re0">url</span>=<span
+class="st0">"doc/descripcion"</span> <span class="re0">idiomas</span>=<span class="st0">"es,en"</span><span
 class="re2">/&gt;</span></span>
 <span class="sc3"><span class="re1">&lt;/modulo<span class="re2">&gt;</span></span></span></pre>
       Este módulo muestra el documento <em>web/doc/descripcion_en.html</em> o <em>web/doc/descripcion_es.html</em>
@@ -611,21 +558,15 @@ class="re2">/&gt;</span></span>
 .xml span.xtra { display:block; }
 
 -->
-</style><pre class="xml"><span class="sc3"><span class="re1">&lt;modulo</span> <span
-
+</style><pre class="xml"><span class="sc3"><span class="re1">&lt;modulo</span> <span
 class="re0">nombre</span>=<span class="st0">"ConsultaClientes"</span><span class="re2">&gt;</span></span>
-    <span class="sc3"><span class="re1">&lt;var-entorno</span> <span class="re0">nombre</span>=<span
-
-class="st0">"XAVA_SEARCH_ACTION"</span> <span class="re0">valor</span>=<span class="st0">"CRUD.searchReadOnly"</span><span
-
+    <span class="sc3"><span class="re1">&lt;var-entorno</span> <span class="re0">nombre</span>=<span
+class="st0">"XAVA_SEARCH_ACTION"</span> <span class="re0">valor</span>=<span class="st0">"CRUD.searchReadOnly"</span><span
 class="re2">/&gt;</span></span>  <span class="sc-1">&lt;!-- 1 --&gt;</span>
-    <span class="sc3"><span class="re1">&lt;modelo</span> <span class="re0">nombre</span>=<span
-
+    <span class="sc3"><span class="re1">&lt;modelo</span> <span class="re0">nombre</span>=<span
 class="st0">"Cliente"</span><span class="re2">/&gt;</span></span>
-    <span class="sc3"><span class="re1">&lt;controlador</span> <span class="re0">nombre</span>=<span
-
-class="st0">"Print"</span><span class="re2">/&gt;</span></span>                                           <span
-
+    <span class="sc3"><span class="re1">&lt;controlador</span> <span class="re0">nombre</span>=<span
+class="st0">"Print"</span><span class="re2">/&gt;</span></span>                                           <span
 class="sc-1">&lt;!-- 2 --&gt;</span>
 <span class="sc3"><span class="re1">&lt;/modulo<span class="re2">&gt;</span></span></span></pre>
       Usando <em>CRUD.searchReadOnly</em> (1) el usuario no puede editar los
