@@ -1,6 +1,7 @@
 Change Log for OpenXava project
 ===============================
 
+- Application chapter of reference guide improved.
 - Fix: Combo for list configurations too large for complex filters.
 - Fix: Calendar icon hides the date with Edge in Spanish.
 - Fix: Drag & drop does not work with Chrome in touch screens.
